# Civitas

./: .gitignore  README.md  package-lock.json  package.json
circuits/: age_proof.circom  build.sh  commitment.circom  passport.circom  voucher.circom
frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auditors/: page.tsx
frontend/app/employees/: page.tsx
frontend/app/employerf/: page.tsx
frontend/app/help/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: providers.tsx
frontend/lib/: auth-context.tsx  config.ts  crypto.ts  encryption.ts  hello.ts  identity.ts  mock-store.tsx  nillon.ts  zcash.ts
frontend/types/: global.d.ts  snarkjs.d.ts  utxo-lib.d.ts
frontend/zk/: payroll.circom  payroll.r1cs  payroll.sym  payroll_0001.zkey  payroll_final.zkey  pot12_0001.ptau  verification_key.json
near/: near_call_example.js
near/contracts/: Cargo.toml
near/contracts/src/: lib.rs
orchestrator/: identity.js  index.js  package-lock.json  package.json
orchestrator/db/: employees.json  payroll_runs.json
orchestrator/pczt/: client.js
orchestrator/zcash/: rpc.js
payroll_circuits/: compile.sh  payroll.circom  proof.json  proof_bundle.json  public.json
payroll_circuits/inputs/: input.json
workload/: Dockerfile  package-lock.json  package.json  run_compute.js
workload/circuits/: commitment.zkey  passport.wasm  passport.zkey  verification_commitment.json  verification_passport.json  voucher.zkey
(+69 files in other folders)
