[package]
name = "zk-payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The "legacy" feature is REQUIRED to use near_sdk::collections
near-sdk = { version = "5.7.0", features = ["legacy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.7.0", features = ["unit-testing"] }